--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <!--navigation-->
         <nav>
             <!--logo-->
-            <a href="#" class="logo">G T Internet</a>
+            <a href="#" class="logo">My Portfolio</a>
             <!--menu-->
             <div class="topnav" id="myTopnav">
-                <a href="#" class="active">HOME</a>
+                <a href="/" class="active">HOME</a>
                 <a href="#">ABOUT ME</a>
                 <a href="#">SERVICE</a>
                 <a href="#">PRODUCT</a>
@@ -110,18 +110,18 @@
         saticfaction result</p> 
         <!--social-->
         <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.facebook.com/bao.luonghoang"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/home"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/hoanggbao/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UC8vBBFl1uqQyYF-fm0hM03Q?view_as=subscriber"><i class="fab fa-youtube"></i></a>
         </div>
         <p class="copyright">Copyright by HoangBao</p>
     </footer>
     <div class="a-social-b">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.facebook.com/bao.luonghoang"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com/home"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/hoanggbao/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.youtube.com/channel/UC8vBBFl1uqQyYF-fm0hM03Q?view_as=subscriber"><i class="fab fa-youtube"></i></a>
     </div>
     <script type="text/javascript" src="backtotop.js"></script>
 </body>
