--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
             </div>
             <div class="box-3">
                 <span>3</span>
-                <p class="heading">Wordpress</p>
+                <p class="heading">Marketing Web</p>
                 <p class="details">
-                    If you want make a software for your business by Wordpress. Please contact me.
+                    If you want make a software for your business by Marketing. Please contact me.
                     I make as soon as possible. You really like my work, if you don't, I
                     change this util you like!   
                 </p>
-                <button><a href="http://dev.azlady.net/nguyenkhoa/">Read More</a></button>
+                <button><a href="https://luonghoangbao.github.io/marketingWeb/">Read More</a></button>
             </div>
         </div>
     </div>
@@ -104,7 +104,7 @@
     </div>
     <!--footer-->
     <footer>
-        <p>Going-To Internet</p>
+        <p>Hoang Bao Developer</p>
         <p>I makes as soon as possible.You really like my work
         If you don't i change this until you like I give you
         saticfaction result</p> 
