--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./style.css" type="text/css"/>
 </head>
 <body>
+    <!-- <div class="scroll-up-btn">
+        <i class="fas fa-angle-up">cc</i>
+    </div> -->
     <section>
         <!--navigation-->
         <nav>
@@ -16,10 +19,10 @@
             <a href="#" class="logo">My Portfolio</a>
             <!--menu-->
             <div class="topnav" id="myTopnav">
-                <a href="/" class="active">HOME</a>
-                <a href="#">ABOUT ME</a>
-                <a href="#">SERVICE</a>
-                <a href="#">PRODUCT</a>
+                <a href="#" class="active">HOME</a>
+                <a href="#about">ABOUT ME</a>
+                <a href="#services">SERVICE</a>
+                <a href="#contact-me">CONTACT ME</a>
                 <a href="#">SIGN-IN</a>
                 <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
@@ -36,7 +39,7 @@
         <img src="./images/anhbao.png" alt="model" class="model">
     </section>
     <!--about section-->
-    <div class="about-container">
+    <div class="about-container" id="about">
         <img src="./images/hoangbao.png" alt="about">
         <div class="about-text">
             <p>About Me</p>
@@ -54,7 +57,7 @@
         </div>
     </div>
     <!--services-->
-    <div class="services">
+    <div class="services" id="services">
         <div class="services-text">
             <p>Services</p>
             <p>Services required</p>
@@ -98,12 +101,12 @@
         </div>
     </div>
     <!--contact me-->
-    <div class="contact-me">
+    <div class="contact-me" id="contact-me">
         <p>If You Have Any Project In Your Mind.</p>
         <button><a href="https://github.com/luonghoangbao">Contact me</a></button>
     </div>
     <!--footer-->
-    <footer>
+    <footer id="footer">
         <p>Hoang Bao Developer</p>
         <p>I makes as soon as possible.You really like my work
         If you don't i change this until you like I give you
@@ -118,10 +121,12 @@
         <p class="copyright">Copyright by HoangBao</p>
     </footer>
     <div class="a-social-b">
+        <a href="#myTopnav"><i class="fas fa-angle-up"></i></a>
         <a href="https://www.facebook.com/bao.luonghoang"><i class="fab fa-facebook"></i></a>
         <a href="https://twitter.com/home"><i class="fab fa-twitter"></i></a>
         <a href="https://www.instagram.com/hoanggbao/"><i class="fab fa-instagram"></i></a>
         <a href="https://www.youtube.com/channel/UC8vBBFl1uqQyYF-fm0hM03Q?view_as=subscriber"><i class="fab fa-youtube"></i></a>
+        <a href="#footer"><i class="fas fa-angle-down"></i></a>
     </div>
     <script type="text/javascript" src="backtotop.js"></script>
 </body>
